Closed
Bug 969358
Opened 12 years ago
Closed 12 years ago
Reply-All on an email I previously sent To:myself with Bcc:others has no recipients
Categories
(MailNews Core :: Composition, defect)
Tracking
(thunderbird28 fixed, thunderbird29 fixed, thunderbird30 fixed, seamonkey2.25 fixed, seamonkey2.26 fixed, seamonkey2.27 fixed, thunderbird_esr2428+ fixed)
People
(Reporter: mortonspam, Assigned: mkmelin)
References
()
Details
(Keywords: regression, Whiteboard: [gs])
Attachments
(1 file)
|
5.73 KB,
patch
|
Irving
:
review+
standard8
:
superreview+
standard8
:
approval-comm-aurora+
standard8
:
approval-comm-beta+
standard8
:
approval-comm-esr24+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0 (Beta/Release)
Build ID: 20131205075310
Steps to reproduce:
Sent an email to myself and blind-copied several other people. That was fine. Later tried to use Reply-All on the email in my Sent folder to send a followup to the original mailing list.
Actual results:
Neither the To nor the Bcc fields were populated.
Expected results:
The To and Bcc fields should have been populated same as in the original email. This is a brand new bug in the Thunderbird release that got automatically installed yesterday, 24.3.0.
Thx Ed.
I can confirm this is exactly what happens. I tried to read the updates in the latest version of TB which changed how reply-to worked (as there was apparently a bug connected with handling alternate reply-to addresses), but I could not work out if stopping reply-to on bcc: email lists was an intentional change or not.
I can say that reply-all on emails with bcc lists in, say, gmail are not processed as TB did prior to this latest release .... which is a shame, as it was the last reason for me to stick with TB rather than setting-up a newsgroup and migrating away.
If someone could confirm what the product is meant to do ... it would be nice, then we can decide.
Many thx.
Magnus, this is not bug 968270. Another possible fall-out from bug 933555?
On the other hand, since both of you have Gmail accounts, the Bcc headers aren't retained in the "Sent Mail" folder, thus in general bug 968270 comment #4 applies. However,
> Neither the To nor the Bcc fields were populated.
The "To" headers still populate for me when trying this with my Gmail account and auto-bcc set.
Various reports on GetSatisfaction that Bcc address were filled in a reply-all-from-own-message situation in prior versions but no longer with 24.3.0, apparently not being auto-bcc cases.
http://gsfn.us/t/4fndb
http://gsfn.us/t/4frdg
http://gsfn.us/t/4fqzr
http://gsfn.us/t/4flot
FWIW since gmail seems to be some kind of issue, I only use this gmail account for posting to usenet and forums. The problem I'm reporting happens with my non-gmail personal and work email accounts.
| Assignee | ||
Comment 6•12 years ago
|
||
Yeah this should have the same fix as bug 968270.
Assignee: nobody → mkmelin+mozilla
Status: UNCONFIRMED → NEW
Component: Untriaged → Composition
Ever confirmed: true
OS: Windows 7 → All
Product: Thunderbird → MailNews Core
Hardware: x86_64 → All
Comment 7•12 years ago
|
||
In reply to comment #0:
Workaround: Instead of "Reply to all", try "Message → Edit Message as New".
| Assignee | ||
Comment 8•12 years ago
|
||
This needs another fix than bug 968270 after all.
Blocks: 933555
Keywords: regression
Summary: Reply-All on an email I previously sent Bcc to more than 1 person has no recipients → Reply-All on an email I previously sent To:myself with Bcc:others has no recipients
(In reply to Tony Mechelynck [:tonymec] from comment #7)
> In reply to comment #0:
>
> Workaround: Instead of "Reply to all", try "Message → Edit Message as New".
Many thanks for the workaround. My mistake for not investigating the options more thoroughly, but would be nice to get Reply-all working again at some point.
| Assignee | ||
Comment 10•12 years ago
|
||
Should be applied on top of bug 968270.
Attachment #8375742 -
Flags: review?(mbanner)
| Assignee | ||
Updated•12 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 11•12 years ago
|
||
Comment on attachment 8375742 [details] [diff] [review]
proposed fix
Review of attachment 8375742 [details] [diff] [review]:
-----------------------------------------------------------------
(should be applied on top of the patch for bug 968270)
Attachment #8375742 -
Flags: review?(irving)
Comment 12•12 years ago
|
||
This doesn't only affect Gmail accounts. This is happening with all IMAP accounts I connect to via Thunderbird. Additionally I believe that the issue is that some limit was introduced in this release that only allows so many characters or bytes to be passed when hitting reply to all. I've noticed that if the To, CC, and BCC fields are short enough when combined together, all will pass to the new message. I haven't been able to test this, but did want to share what I've seen anecdotally.
Comment 13•12 years ago
|
||
Comment on attachment 8375742 [details] [diff] [review]
proposed fix
Review of attachment 8375742 [details] [diff] [review]:
-----------------------------------------------------------------
I still wish I knew where we introduced the regression that caused bug 933555 in the first place; it seems to me like all of these problems are falling out from that patch. I'm torn here - I can r+ this patch, because it solves the immediate problem in this bug, but I still feel like we're sticking bandages on a deeper problem. Mark, do you have any time to look at this?
::: mailnews/compose/src/nsMsgCompose.cpp
@@ +2559,5 @@
> + break;
> + }
> + else if (ccEmailAddresses.Contains(curIdentityEmail2))
> + {
> + // If you auto-Cc yourself your email would be in Cc - but we
Trailing white space
Attachment #8375742 -
Flags: superreview?(mbanner)
Attachment #8375742 -
Flags: review?(mbanner)
Attachment #8375742 -
Flags: review?(irving)
Attachment #8375742 -
Flags: review+
| Assignee | ||
Comment 14•12 years ago
|
||
(In reply to :Irving Reid from comment #13)
> I still wish I knew where we introduced the regression that caused bug
> 933555 in the first place;
That would be the (lookupIdentity == lookupIdentity2) check of bug 917231. Basically, fixing one case has regressed another unexpected case.
Updated•12 years ago
|
Attachment #8375742 -
Flags: superreview?(standard8) → superreview+
| Assignee | ||
Comment 15•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 30.0
| Assignee | ||
Comment 17•12 years ago
|
||
I'd encourage people to try out nightly builds with the fix included - you can get one from here: http://ftp.mozilla.org/pub/mozilla.org/thunderbird/nightly/latest-comm-central/
| Assignee | ||
Updated•12 years ago
|
Attachment #8375742 -
Flags: approval-comm-esr24?
Attachment #8375742 -
Flags: approval-comm-aurora?
Comment 18•12 years ago
|
||
Comment on attachment 8375742 [details] [diff] [review]
proposed fix
Bug 933555 also landed on comm-aurora at that time, thus SeaMonkey will need this patch on comm-beta to be effective for SM 2.25.
Adding this to the existing branch requests.
Attachment #8375742 -
Flags: approval-comm-beta?
status-seamonkey2.25:
--- → affected
status-seamonkey2.26:
--- → affected
status-seamonkey2.27:
--- → fixed
status-thunderbird28:
--- → affected
status-thunderbird29:
--- → affected
status-thunderbird30:
--- → fixed
status-thunderbird_esr24:
--- → affected
Updated•12 years ago
|
Attachment #8375742 -
Flags: approval-comm-beta?
Attachment #8375742 -
Flags: approval-comm-beta+
Attachment #8375742 -
Flags: approval-comm-aurora?
Attachment #8375742 -
Flags: approval-comm-aurora+
Comment 19•12 years ago
|
||
status-seamonkey2.25:
affected → ---
status-seamonkey2.26:
affected → ---
status-seamonkey2.27:
fixed → ---
tracking-thunderbird_esr24:
--- → 28+
Comment 20•12 years ago
|
||
Comment on attachment 8375742 [details] [diff] [review]
proposed fix
Unfortunately this doesn't apply cleanly to beta. Magnus, could you upload a patch that works for Beta & ESR?
Thanks
Attachment #8375742 -
Flags: approval-comm-beta+ → approval-comm-beta-
Flags: needinfo?(mkmelin+mozilla)
Comment 21•12 years ago
|
||
Comment on attachment 8375742 [details] [diff] [review]
proposed fix
I've fixed the merge issue and have been able to land this bug here:
https://hg.mozilla.org/releases/comm-beta/rev/a5d95c28e762
Attachment #8375742 -
Flags: approval-comm-beta- → approval-comm-beta+
Flags: needinfo?(mkmelin+mozilla)
Updated•12 years ago
|
Comment 22•12 years ago
|
||
(In reply to Mark Banner (:standard8) from comment #21)
> Comment on attachment 8375742 [details] [diff] [review]
> proposed fix
>
> I've fixed the merge issue and have been able to land this bug here:
>
> https://hg.mozilla.org/releases/comm-beta/rev/a5d95c28e762
Plus a bustage-fix follow-up: https://hg.mozilla.org/releases/comm-beta/rev/f77732d5473c
status-seamonkey2.25:
--- → fixed
status-seamonkey2.26:
--- → fixed
status-seamonkey2.27:
--- → fixed
Updated•12 years ago
|
Attachment #8375742 -
Flags: approval-comm-esr24? → approval-comm-esr24+
Comment 23•12 years ago
|
||
Comment 24•11 years ago
|
||
Hi,
This bug seems to have reappeared. I've updated to the latest release (31.2.0) and it's doing excatly as described in the bug report. Create an email to yourself, BCC some other addresses (many or just one), send then go into Sent, hit Reply All and all address fields (To and BCC) are blank.
Do I need to post this as a new bug or can this be reopened? (Sorry, I'm new).
| Assignee | ||
Comment 25•11 years ago
|
||
This is closed, so open a new bug. (I do think it's highly likely not to be a bug in thunderbird, do make sure to test with "thunderbird.exe -safe-mode"
You need to log in
before you can comment on or make changes to this bug.
Description
•