Bug 969358 - Reply-All on an email I previously sent To:myself with Bcc:others has no recipients. r=irving, r=standard8